[tool.poetry]
name = "brewdao"
version = "0.1.0"
description = ""
authors = ["Satish Terala <satishkt@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
eth-brownie = "^1.18.1"
fastapi = "^0.77.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
